<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/profile"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/bank"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_farminfo"
            android:icon="@drawable/info"
            android:title="@string/menu_farminfo" />
        <item
            android:id="@+id/nav_cropcalender"
            android:icon="@drawable/calender"
            android:title="@string/menu_cropcalender" />
        <item
            android:id="@+id/nav_cropinfo"
            android:icon="@drawable/grass"
            android:title="@string/menu_cropinfo" />
    </group>
</menu>